# day-news

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: styles.css
config/: site.toml  sources.toml
content/2026/07/: 2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md
docs/superpowers/plans/: 2026-07-11-daily-news-implementation.md
docs/superpowers/specs/: 2026-07-11-daily-news-design.md
src/day_news/: __main__.py  cli.py  config.py  dedupe.py  feed.py  generate.py  history.py  issue.py  models.py  normalize.py  readme.py  select.py  site.py  time_window.py  validate.py
src/day_news/fetchers/: __init__.py  hacker_news.py  http.py  rss.py
templates/: about.html.j2  archive.html.j2  base.html.j2  index.html.j2  issue.html.j2  issue.md.j2  month.html.j2  sources.html.j2
tests/: test_cli.py  test_config.py  test_dedupe.py  test_feed.py  test_generate.py  test_history.py  test_issue.py  test_normalize.py  test_package.py  test_readme.py  test_select.py  test_site.py  test_time_window.py  test_validate.py
tests/fetchers/: test_batch.py  test_hacker_news.py  test_http.py  test_rss.py
tests/fixtures/hn/: beststories.json  item-101.json  item-102.json  item-103.json  item-104.json  newstories.json  topstories.json
tests/fixtures/rss/: partial.xml  sample.xml
tests/integration/: test_daily_generation.py
