[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "day-news"
version = "0.1.0"
description = "A keyless, automatically published daily news digest"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4==4.13.4",
  "feedparser==6.0.11",
  "httpx==0.28.1",
  "Jinja2==3.1.6",
  "markdown-it-py==3.0.0",
  "python-dateutil==2.9.0.post0",
  "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==0.26.0",
  "pytest-cov==6.2.1",
  "ruff==0.12.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
